src/test/ui/inference/cannot-infer-closure-circular.stderr
error[E0282]: type annotations needed for the closure `fn(Result<(), _>) -> Result<(), _>`
  --> $DIR/cannot-infer-closure-circular.rs:10:9
   |
LL |         Ok(v)
   |         ^^ cannot infer type for type parameter `E` declared on the enum `Result`
   |
help: give this closure an explicit return type without `_` placeholders
   |
LL |     let x = |r| -> Result<(), _> {
   |                 ++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
